# rs-cast_trait

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: cast.rs  lib.rs
